2014-04-03  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/classic/gsad.xsl (html-gsa-navigation): When the user does
	not have access to a top level menu, display an empty spacer instead of
	skipping the menu.  This looks more uniform and keeps the menu positions
	consistent.

2014-04-03  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (get_task): Get only permissions specific to the task.

2014-04-02  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Remove "Observer" and "Observer Groups" from Create Task and Edit Task
	pages. Hide the "Everything" permission for the Admin role and remove
	limit on number of permissions.

	* src/gsad_omp.c (create_task_omp, edit_task, save_task_omp)
	(save_container_task_omp): Remove handling of observer and groups
	parameters, which are no longer used.
	(get_task): Adjust permissions filter to exclude "Everything"
	permission for the Admin role and get all filtered permissions.

	* src/gsad.c (init_validator): Remove "observers" parameter and adjust
	"users" which was an alias of this.

	* src/html/classic/omp.xsl (new_task, html-edit-task-form): Remove
	form elements for "Observer" and "Observer Groups".

2014-04-02  Matthew Mundell <matthew.mundell@greenbone.net>

	Ensure that Edit Port List and Edit Role always return to the previous
	page.

	* src/gsad.c (init_validator): Add next_next.

	* src/html/classic/omp.xsl (html-edit-port-list-form)
	(html_edit_role_form): Pass the next param for the current page in the
	next_next param of the add and delete forms, because these forms are
	already using the next param to return to the current page.

2014-04-02  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/omp.xsl (html-tags-trash-table): Change table header
	from "Resource ID" to "Resource Name".

2014-04-02  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/classic/wizard.xsl (quick-task-wizard): Hide Email field