@@ -492,6 +492,19 @@ td p {
  font-weight: bold;
 }
 
+div.empty_top_button {
+ display: block;
+ width: 128px;
+ height: 35px;
+ background: url('img/style/top_menu_buttons.png');
+ background-position: -130px 0px;
+ line-height: 35px;
+ font-size: 10px;
+ color: #FFFFFF;
+ text-decoration: none;
+ font-weight: bold;
+}
+
 #gb_menu ul .first_button > a {
  width: 130px;
  background-position: 0px 0px;
